@@ -10,6 +10,8 @@ import Networking
 import Utils
 
 public protocol UserService {
+  func getAllUsersFromLocal(usersResult: (([User]) -> Void)?)
+  func getAwayUsers(onFetch: ((Result<[User], Error>) -> Void)?)
   func getAllUsers(sortDecrciptors: [NSSortDescriptor]?, onLocal: ((Result<[User], Error>) -> Void)?, onFetch: ((Result<[User], Error>) -> Void)?)
   func getUserWithId(_ userId: String, onLocal: ((Result<User, Error>) -> Void)?, onFetch: ((Result<User, Error>) -> Void)?)
   func getTodayUsersForRecordType(_ recordType: RecordType, onFetch: ((Result<[User], Error>) -> Void)?)
@@ -23,6 +25,17 @@ final class UserServiceImpl: UserService {
     self.coreDataManager = coreDataManager
   }
   
+  func getAllUsersFromLocal(usersResult: (([User]) -> Void)?) {
+    let context = CoreDataController.shared.backgroundContext()
+    do {
+      let mos = try coreDataManager.getManagedObjects(sortDescriptors:  [NSSortDescriptor(key: "slackProfile.realName", ascending: true)], context: context)
+      let users = mos.compactMap { User($0) }
+      usersResult?(users)
+    } catch {
+      usersResult?([])
+    }
+  }
+  
   func getAllUsers(sortDecrciptors: [NSSortDescriptor]?, onLocal: ((Result<[User], Error>) -> Void)?, onFetch: ((Result<[User], Error>) -> Void)?) {
     let context = CoreDataController.shared.backgroundContext()
     do {
@@ -32,6 +45,7 @@ final class UserServiceImpl: UserService {
     } catch {
       onLocal?(.failure(error))
     }
+
     
     userManager.getAllUsers { [weak self] usersResult in
       switch usersResult {
@@ -73,6 +87,17 @@ final class UserServiceImpl: UserService {
       switch usersResult {
       case .success(let array):
         onFetch?(.success(array))
+      case .failure(let error):
+        onFetch?(.failure(error))
+      }
+    }
+  }
+  
+  func getAwayUsers(onFetch: ((Result<[User], Error>) -> Void)?) {
+    userManager.getAllUsers { usersResult in
+      switch usersResult {
+      case .success(let array):
+        onFetch?(.success(array.filter({ $0.todayStatus?.isEmpty == false })))
       case .failure(let error):
         onFetch?(.failure(error))
       }
