@@ -5,39 +5,52 @@
     
     
       
-      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.011099">
+      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.006648">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="1: increment_build_number" time="2.054081">
+      <testcase classname="fastlane.lanes" name="1: increment_build_number" time="1.179018">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="2: Switch to ios rebeta lane" time="0.003289">
+      <testcase classname="fastlane.lanes" name="2: Switch to ios rebeta lane" time="0.002831">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="3: clean_build_artifacts" time="0.002963">
+      <testcase classname="fastlane.lanes" name="3: clean_build_artifacts" time="0.002996">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="4: clear_derived_data" time="6.489479">
+      <testcase classname="fastlane.lanes" name="4: clear_derived_data" time="1.237479">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="5: xcodebuild" time="13.163438">
+      <testcase classname="fastlane.lanes" name="5: xcodebuild" time="6.817794">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="6: gym" time="40.290462">
+      <testcase classname="fastlane.lanes" name="6: gym" time="129.896321">
         
-          <failure message="/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/actions/actions_helper.rb:48:in `execute_action'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:232:in `block in execute_action'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:227:in `chdir'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:227:in `execute_action'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:157:in `trigger_action_by_name'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/fast_file.rb:154:in `method_missing'&#10;Fastfile:80:in `block (2 levels) in parsing_binding'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/lane.rb:33:in `call'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/lane.rb:33:in `call'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:204:in `try_switch_to_lane'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:146:in `trigger_action_by_name'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/fast_file.rb:154:in `method_missing'&#10;Fastfile:65:in `block (2 levels) in parsing_binding'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/lane.rb:33:in `call'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/lane.rb:33:in `call'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:49:in `block in execute'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:45:in `chdir'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/runner.rb:45:in `execute'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/lane_manager.rb:56:in `cruise_lane'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/command_line_handler.rb:36:in `handle'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/commands_generator.rb:108:in `block (2 levels) in run'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/commander-fastlane-4.4.6/lib/commander/command.rb:178:in `call'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/commander-fastlane-4.4.6/lib/commander/command.rb:178:in `call'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/commander-fastlane-4.4.6/lib/commander/command.rb:153:in `run'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/commander-fastlane-4.4.6/lib/commander/runner.rb:476:in `run_active_command'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane_core/lib/fastlane_core/ui/fastlane_runner.rb:76:in `run!'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/commander-fastlane-4.4.6/lib/commander/delegates.rb:15:in `run!'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/commands_generator.rb:333:in `run'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/commands_generator.rb:41:in `start'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/fastlane/lib/fastlane/cli_tools_distributor.rb:108:in `take_off'&#10;/Users/andrii/.fastlane/bin/bundle/lib/ruby/gems/2.2.0/gems/fastlane-2.112.0/bin/fastlane:23:in `&lt;top (required)&gt;'&#10;/Users/andrii/.fastlane/bin/bundle/bin/fastlane:22:in `load'&#10;/Users/andrii/.fastlane/bin/bundle/bin/fastlane:22:in `&lt;main&gt;'&#10;&#10;Error building the application - see the log above" />
+      </testcase>
+    
+      
+      <testcase classname="fastlane.lanes" name="7: crashlytics" time="4.876435">
+        
+      </testcase>
+    
+      
+      <testcase classname="fastlane.lanes" name="8: get_build_number" time="0.360863">
+        
+      </testcase>
+    
+      
+      <testcase classname="fastlane.lanes" name="9: slack" time="1.331733">
         
       </testcase>
     
