@@ -1,1 +1,8 @@
-• Hello world
+• aadded devices:
+
+Rostyslav Moroziuk
+Mariana V
+Yulia D
+Tanya Y
+Oleg K
+Andrii M
